[package]
name = "mygame"
version = "0.0.1"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>"]

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx_macros"
